Porting Docker container to 5.0

--- a/src/DeconzToMqtt/Dockerfile
+++ b/src/DeconzToMqtt/Dockerfile
@@ -1,12 +1,13 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/core/runtime:3.0 AS base
+FROM mcr.microsoft.com/dotnet/runtime:5.0 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY . .
+COPY ["DeconzToMqtt/DeconzToMqtt.csproj", "DeconzToMqtt/"]
 RUN dotnet restore "DeconzToMqtt/DeconzToMqtt.csproj"
+COPY . .
 WORKDIR "/src/DeconzToMqtt"
 RUN dotnet build "DeconzToMqtt.csproj" -c Release -o /app/build
 
@@ -14,9 +15,6 @@ FROM build AS publish
 RUN dotnet publish "DeconzToMqtt.csproj" -c Release -o /app/publish
 
 FROM base AS final
-RUN mkdir /logs
-RUN mkdir /configuration
-VOLUME /logs /configuration
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "DeconzToMqtt.dll"]
