--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,11 +30,14 @@ stages:
     pool: 
       vmImage: 'ubuntu-latest'
     steps:
-    
-    - task: GitVersion@5
-      displayName: 'Get Version Number'
+
+    - task: gitversion/setup@0
       inputs:
-        runtime: 'core'
+        versionSpec: '5.6.0'
+
+    - task: gitversion/execute@0
+      inputs:
+        useConfigFile: true
         configFilePath: 'gitversion.yml'
 
     - task: Bash@3
