--- a/src/DeconzToMqtt2/DeconzToMqtt2.csproj
+++ b/src/DeconzToMqtt2/DeconzToMqtt2.csproj
@@ -3,10 +3,13 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
 
     <ItemGroup>
+
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
 
         <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="3.0.15" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
