--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ stages:
 
     - task: gitversion/setup@0
       inputs:
-        versionSpec: '5.6.0'
+        versionSpec: '5.x'
 
     - task: gitversion/execute@0
       inputs:
